[package]
name = "switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet = { path = "./packet" }
bytes = "1.3.0"
log = "0.4.17"
log4rs = "1.2.0"
dirs = "4.0.0"
libc = "0.2.137"

dashmap = "5.4.0"
crossbeam = "0.8.2"
parking_lot = "0.12.1"

rsa = "0.7.2"
rand = "0.8.5"
sha2 = { version = "0.10.6", features = ["oid"] }
#colored = "2.0.0"

thiserror = "1.0.37"
chrono = "0.4.23"
lazy_static = "1.4.0"
moka = "0.9.6"
protobuf = "3.2.0"

console = "0.15.2"
mac_address = "1.1.4"
clap = { version = "4.0.32", features = ["derive"] }
[target.'cfg(any(unix))'.dependencies]
tun = { path = "./rust-tun" }
sudo = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"] }
wintun = "0.2.1"
libloading = "0.7.4"
runas = "0.2.1"

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"