[package]
name = "switch-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switch = {path="../switch"}
mac_address = "1.1.4"
clap = { version = "4.0.32", features = ["derive"] }
console = "0.15.2"
dirs = "4.0.0"
log = "0.4.17"
log4rs = "1.2.0"
tokio = { version = "1.24.1", features = ["full"] }
chrono = "0.4.23"

serde = "1.0"
serde_yaml = "0.9"
crossbeam = "0.8.2"
lazy_static = "1.4.0"
parking_lot = "0.12.1"

#parity-tokio-ipc = "0.9.0"
futures = "0.3"
[target.'cfg(any(target_os = "linux",target_os = "macos"))'.dependencies]
sudo = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"] }
#runas = "0.2.1"
windows-service = "0.5.0"

