[package]
name = "switch-desktop"
version = "1.1.0"
description = "switch desktop"
authors = ["lubeilin"]
license = ""
repository = ""
default-run = "switch-desktop"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }
embed-resource = "2.2"

[dependencies]
switch = {path="../switch"}
common = {path="../common"}
dirs = "4.0.0"
os_info = "3.7.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
