[package]
name = "switch-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switch = {path="../switch"}

jni = { version = "0.21.1", default-features = false }
[lib]
crate-type = ["staticlib", "cdylib"]