[package]
name = "switch-mini"
version = "1.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switch = {path="../switch"}
tokio = { version = "1.28.1", features = ["full"] }
getopts = "0.2.21"
ansi_term = "0.12.1"
