[package]
name = "switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet = { path = "./packet" }
nat_traversal = { path = "./nat_traversal" }
bytes = "1.3.0"
log = "0.4.17"
libc = "0.2.137"

dashmap = "5.4.0"
crossbeam = "0.8.2"
parking_lot = "0.12.1"

rsa = "0.7.2"
rand = "0.8.5"
sha2 = { version = "0.10.6", features = ["oid"] }

thiserror = "1.0.37"
chrono = "0.4.23"
lazy_static = "1.4.0"
moka = "0.9.6"
protobuf = "3.2.0"
os_info = "3.5.1"
tokio = { version = "1.24.1", features = ["full"] }
[target.'cfg(any(unix))'.dependencies]
tun = { path = "./rust-tun" }

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.2.1"
libloading = "0.7.4"

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
