[package]
name = "switch"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet = { path = "./packet" }
p2p_channel = { path = "./p2p_channel" }
bytes = "1.3.0"
log = "0.4.17"
libc = "0.2.137"

dashmap = "5.4.0"
crossbeam = "0.8.2"
crossbeam-skiplist = "0.1"
parking_lot = "0.12.1"

rsa = "0.7.2"
rand = "0.8.5"
sha2 = { version = "0.10.6", features = ["oid"] }

thiserror = "1.0.37"
chrono = "0.4.23"
#lazy_static = "1.4.0"
#moka = "0.9.6"
protobuf = "3.2.0"
#local-ip-address = "0.4.9"
socket2 ={ version = "0.5.2", features = ["all"] }
tokio = { version = "1.28.1", features = ["full"] }
[target.'cfg(any(unix))'.dependencies]
tun = { path = "./rust-tun" }

[target.'cfg(target_os = "windows")'.dependencies]

win-tun-tap = {path = "./win-tun-tap"}
libloading = "0.7.4"

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
