[package]
name = "vn-link-cli"
version = "1.2.16"
edition = "2021"

[dependencies]
vn-link = { path = "../vn-link", default-features = false }
common = { path = "../common", default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.17"

[features]
default = ["default-feature"]
default-feature = ["server_encrypt", "aes_gcm", "aes_cbc", "aes_ecb", "sm4_cbc", "chacha20_poly1305", "port_mapping", "log", "command", "file_config", "lz4", "ws"]

openssl = ["vn-link/openssl", "common/openssl"]
openssl-vendored = ["vn-link/openssl-vendored", "common/openssl-vendored"]
ring-cipher = ["vn-link/ring-cipher", "common/ring-cipher"]
aes_cbc = ["vn-link/aes_cbc", "common/aes_cbc"]
aes_ecb = ["vn-link/aes_ecb", "common/aes_ecb"]
sm4_cbc = ["vn-link/sm4_cbc", "common/sm4_cbc"]
aes_gcm = ["vn-link/aes_gcm", "common/aes_gcm"]
chacha20_poly1305 = ["vn-link/chacha20_poly1305", "common/chacha20_poly1305"]
server_encrypt = ["vn-link/server_encrypt", "common/server_encrypt"]
port_mapping = ["vn-link/port_mapping", "common/port_mapping"]
lz4 = ["vn-link/lz4_compress", "common/lz4"]
zstd = ["vn-link/zstd_compress", "common/zstd"]
upnp = ["vn-link/upnp", "common/upnp"]
ws = ["vn-link/ws", "common/ws"]
wss = ["vn-link/wss", "common/wss"]
log = ["common/log"]
command = ["common/command"]
file_config = ["common/file_config"]

