[package]
name = "vnt-cli"
version = "1.2.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vnt = { path = "../vnt", package = "vnt", default-features = false, features = ["integrated_tun"] }
common = { path = "../common", default-features = false, features = ["integrated_tun"] }
log = "0.4.17"
anyhow = "1.0.82"
console = "0.15.2"

[target.'cfg(any(target_os = "linux",target_os = "macos"))'.dependencies]
sudo = "0.6.0"
signal-hook = "0.3.17"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"] }

[features]
default = ["default-feature"]
default-feature = ["server_encrypt", "aes_gcm", "aes_cbc", "aes_ecb", "sm4_cbc", "chacha20_poly1305", "ip_proxy", "port_mapping", "log", "command", "file_config", "lz4", "ws"]

openssl = ["vnt/openssl", "common/openssl"]
openssl-vendored = ["vnt/openssl-vendored", "common/openssl-vendored"]
ring-cipher = ["vnt/ring-cipher", "common/ring-cipher"]
aes_cbc = ["vnt/aes_cbc", "common/aes_cbc"]
aes_ecb = ["vnt/aes_ecb", "common/aes_ecb"]
sm4_cbc = ["vnt/sm4_cbc", "common/sm4_cbc"]
aes_gcm = ["vnt/aes_gcm", "common/aes_gcm"]
chacha20_poly1305 = ["vnt/chacha20_poly1305", "common/chacha20_poly1305"]
server_encrypt = ["vnt/server_encrypt", "common/server_encrypt"]
port_mapping = ["vnt/port_mapping", "common/port_mapping"]
lz4 = ["vnt/lz4_compress", "common/lz4"]
zstd = ["vnt/zstd_compress", "common/zstd"]
ip_proxy = ["vnt/ip_proxy", "common/ip_proxy"]
upnp = ["vnt/upnp", "common/upnp"]
ws = ["vnt/ws", "common/ws"]
wss = ["vnt/wss", "common/wss"]
log = ["common/log"]
command = ["common/command"]
file_config = ["common/file_config"]
[build-dependencies]
rand = "0.8.5"
chrono = "0.4.23"