[package]
name = "vnt-jni"
version = "1.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
vnt = {path="../vnt"}
parking_lot = "0.12.1"

jni = { version = "0.21.1", default-features = false }
log = "0.4.20"
spki = { version = "0.7.2", features = ["fingerprint", "alloc","base64","pem"]}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[lib]
crate-type = ["staticlib", "cdylib"]