[package]
name = "win-tun-tap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
winreg = "0.51.0"
scopeguard = "1.1"
libloading = "0.8.0"
widestring = "1.0.2"
once_cell = "1.8"
itertools = "0.11.0"
rand = "0.8.5"
[dependencies.winapi]
version = "0.3"
features = [
    "errhandlingapi",
    "combaseapi",
    "ioapiset",
    "winioctl",
    "setupapi",
    "synchapi",
    "netioapi",
    "fileapi",
    "winbase",
    "winerror",
    "ipexport",
    "iphlpapi",
    "handleapi",
    "ifdef",
    "minwinbase",
    "basetsd",
    "impl-default"
]